2004-05-05  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/translation.{cc,h} (compose): Add a set of overloaded utility
	functions to be used to compose a text message from a format string
	and up to three string arguments.  This allows the translator to
	arrange the arguments as required by the language.

	* src/filetree.cc (FileTree::save_file_at_iter): Make use of
	Util::compose() instead of separately piecing strings together.
	Also, translate the format string via gettext().
	(load_file_with_fallback): ditto
	* src/mainwindow.cc (MainWindow::on_exec_search): ditto
	* src/prefdialog.cc (PrefDialog::on_entry_fallback_activate):
	ditto.

2004-05-05  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/miscutils.cc: Compile the runtime check for that gconfmm
	bug only if REGEXXER_ENABLE_GCONFMM_VALUE_HACK is defined, as it
	currently always is.

	* src/main.cc (main): Test for REGEXXER_ENABLE_GCONFMM_VALUE_HACK
	around the call to Util::check_for_broken_gconfmm_value_changed().

2004-05-05  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/translation.{cc,h} (initialize_gettext): New utility
	function to take care of setting up the text domain.

	* src/main.cc (main): Use initialize_gettext().

2004-05-05  Daniel Elstner  <daniel.elstner@gmx.net>

	* ABOUT-NLS: Add missing file to fix the build.

	* src/aboutdialog.cc: Translate all user-visible strings except
	for those instances where positional parameter substitution is
	required for proper results.  I'll deal with those ones later.
	* src/controller.cc: ditto
	* src/filebuffer.cc: ditto
	* src/filetree.cc: ditto
	* src/main.cc: ditto
	* src/mainwindow.cc: ditto
	* src/pcreshell.cc: ditto
	* src/prefdialog.cc: ditto
	* src/statusline.cc: ditto.

	* src/translation.h (N_): #define to gettext_noop(s) rather than
	simply (s).  This doesn't actually make a difference but I think
	the intent is clearer that way.

2004-05-05  Daniel Elstner  <daniel.elstner@gmx.net>

	Add support for message translation via gettext.
